--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.7",
     "date-fns": "^4.1.0",
+    "form-data": "^4.0.4",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.10",
